--- a/CHANGELOG.txt
+++ b/CHANGELOG.txt
@@ -15,3 +15,8 @@
 12. ~ webaccount.gemspec: Change the date, fix the summary, and the description.
 13. + CHANGELOG.txt
 14. + README.md
+
+# 20240407
+
+0.3.1: ./lib/README.md --> ./README.md
+
